Cover model mutation and status results